# zhoo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
compiler/zhoo/: Cargo.toml
compiler/zhoo-analyzer/: Cargo.toml
compiler/zhoo-analyzer/src/: analyzer.rs  builtins.rs  checker.rs  context.rs  lib.rs  scope.rs
compiler/zhoo-analyzer/src/builtins/: builtin.rs  c.rs  io.rs  mod.rs  sys.rs
compiler/zhoo-analyzer/src/builtins/builtin/: io.rs  sys.rs
compiler/zhoo-analyzer/src/checker/: mainchecker.rs  namechecker.rs  typechecker.rs
compiler/zhoo-ast/: Cargo.toml
compiler/zhoo-ast/src/: ast.rs  lib.rs  pp.rs  ptr.rs
compiler/zhoo-codegen/: Cargo.toml
compiler/zhoo-codegen-cranelift/: Cargo.toml
compiler/zhoo-codegen-cranelift/src/: codegen.rs  interface.rs  lib.rs  translator.rs
compiler/zhoo-codegen/src/: lib.rs
compiler/zhoo-codegen/src/cranelift/: interface.rs  mod.rs
compiler/zhoo-codegen/src/cranelift/aot/: codegen.rs  translator.rs
compiler/zhoo-driver/: Cargo.toml  README.md
compiler/zhoo-driver/src/: cmd.rs  common.rs  lib.rs  main.rs
compiler/zhoo-driver/src/cmd/: handle.rs  handler.rs  settings.rs
compiler/zhoo-driver/src/cmd/handle/: compile.rs  run.rs
compiler/zhoo-driver/src/cmd/handler/: compile.rs  run.rs
compiler/zhoo-driver/src/cmd/settings/: compile.rs
compiler/zhoo-errors/: Cargo.toml
compiler/zhoo-errors/src/: lib.rs  report.rs  semantic.rs  syntax.rs
compiler/zhoo-helper/: Cargo.toml
compiler/zhoo-helper/src/: lib.rs  pack.rs  strcase.rs
compiler/zhoo-parser/: Cargo.toml
compiler/zhoo-parser/src/: lib.rs  parser.rs
compiler/zhoo-parser/src/grammar/: grammar.lalrpop  mod.rs
compiler/zhoo-parser/src/tree/: ast.rs  mod.rs  ty.rs
compiler/zhoo-span/: Cargo.toml
compiler/zhoo-span/src/: lib.rs  source.rs  tests.rs
compiler/zhoo-util/: Cargo.toml
compiler/zhoo-util/src/: error.rs  lib.rs  pack.rs  source.rs  span.rs  strcase.rs
compiler/zhoo-util/src/error/: generate.rs  report.rs  semantic.rs  syntax.rs
compiler/zhoo/src/: lib.rs  main.rs
compiler/zhoo/src/back/: mod.rs
compiler/zhoo/src/back/codegen/: mod.rs
compiler/zhoo/src/back/codegen/builtins/: builtin.rs
compiler/zhoo/src/back/codegen/builtins/builtin/: io.rs  sys.rs
compiler/zhoo/src/back/codegen/cranelift/: allocator.rs  aot.rs  interface.rs  mod.rs
compiler/zhoo/src/back/codegen/cranelift/aot/: codegen.rs  translator.rs
compiler/zhoo/src/front/: mod.rs
compiler/zhoo/src/front/analyzer/: checker.rs  context.rs  mod.rs  scope.rs
compiler/zhoo/src/front/analyzer/builtins/: builtin.rs
compiler/zhoo/src/front/analyzer/builtins/builtin/: io.rs  sys.rs
compiler/zhoo/src/front/analyzer/checker/: mainchecker.rs  namechecker.rs  typechecker.rs
compiler/zhoo/src/front/grammar/: grammar.lalrpop  mod.rs
compiler/zhoo/src/front/parser/: mod.rs  syntax.rs
compiler/zhoo/src/front/parser/tree/: ast.rs  pbox.rs  pp.rs  ty.rs
compiler/zhoo/src/util/: color.rs  constant.rs  error.rs  mod.rs  pack.rs  source.rs  span.rs  strcase.rs
compiler/zhoo/src/util/error/: generate.rs  report.rs  semantic.rs  syntax.rs
samples/: README.md  sample.zo
samples/code/: README.md
samples/code/factorial/: factorial.zo
samples/code/fibonacci/: fibonacci.zo
samples/code/fizzbuzz/: fizzbuzz.zo
samples/code/hello/: hello.zo
samples/design/: README.md
samples/design/arrays/: array.zo  index.zo
samples/design/assertions/: mock.zo  test.zo  unit.zo
samples/design/assignments/: assign.zo  assignop.zo
samples/design/branches/: else_if.zo  if.zo  if_else.zo
samples/design/branches/ternary/: when.zo
samples/design/comments/: block.zo  line.zo
samples/design/concurrency/asyncness/: async.zo  await.zo
samples/design/data/: struct.zo
samples/design/data/structures/: struct_decl.zo  struct_init.zo  struct_tuple.zo
samples/design/data/types/: option.zo
samples/design/data/types/alias/: group.zo  single.zo
samples/design/enums/: enum.zo
samples/design/ffi/: ext.zo
samples/design/functions/: call.zo  currying.zo  fun.zo  lambda.zo
samples/design/interfaces/: behavior.zo  usage.zo
samples/design/literals/: bool.zo  char.zo
samples/design/literals/numbers/: int.zo  real.zo
samples/design/literals/strings/: raw.zo  string.zo
samples/design/loops/: break.zo  for.zo  until.zo  while.zo
samples/design/macros/: call.zo  macro.zo
samples/design/matching/: is.zo  match.zo
samples/design/matching/patterns/: struct.zo
samples/design/operators/arithmetic/: binop.zo  unop.zo
samples/design/operators/bitwize/: binop.zo
samples/design/operators/comparison/: eq.zo  ge.zo  gt.zo  le.zo  lt.zo  ne.zo
samples/design/operators/conversion/: cast.zo
samples/design/operators/logical/: and.zo  or.zo
samples/design/operators/shift/: left.zo  right.zo
samples/design/patterns/: tuple.zo
samples/design/tuples/: access.zo  tuple.zo
samples/design/types/: option.zo  result.zo
samples/design/variables/: imu.zo  mul.zo  mut.zo  shadowing.zo  val.zo
samples/design/webassembly/: wasm.zo
samples/playground/: README.md  basic.zo
samples/reports/: README.md
samples/reports/semantic/: arguments_mismatch.zo  function_not_found.zo  identifier_not_found.zo  main_has_inputs.zo  name_clash.zo  out_of_loop.zo  type_mismatch.zo
src/tools/loaders/: Cargo.toml
src/tools/loaders/src/: lib.rs  loader.rs  spin.rs
src/tools/loaders/src/loader/: icon.rs  loading.rs  message.rs
src/tools/loaders/src/spin/: spinner.rs
src/tools/zhoo-vscode/: README.md  language-configuration.json
src/tools/zhoo-vscode/syntaxes/: zhoo.tmLanguage.json
tools/loaders/: Cargo.toml  README.md
tools/loaders/src/loader/: icon.rs  loading.rs  message.rs
tools/loaders/src/spin/: frame.rs  spinner.rs
tools/zhoo-vscode/: package.json
tools/zhoo-vscode/syntaxes/: zhoo.tmLanguage.json
