[package]
authors = ["monsieurbadia <monsieurbadia@gmail.com>"]
description = "..."
edition = "2021"
license = "MIT"
name = "zhoo-analyzer"
readme = "README.md"
repository = "https://github.com/monsieurbadia/zhoo"
version.workspace = true

[lib]
doctest = false

[dependencies]
fnv = "1.0.7"
zhoo-parser = {path = "../zhoo-parser"}
zhoo-util = {path = "../zhoo-util"}
