[package]
authors = ["monsieurbadia <monsieurbadia@gmail.com>"]
description = "..."
edition = "2021"
license = "MIT"
name = "zhoo-analyzer"
readme = "README.md"
repository = "https://github.com/monsieurbadia/zhoo"
version.workspace = true

[lib]
doctest = false

[dependencies]
fxhash = "0.2.1"
zhoo-ast = {path = "../zhoo-ast"}
zhoo-errors = {path = "../zhoo-errors"}
zhoo-helper = {path = "../zhoo-helper"}
zhoo-span = {path = "../zhoo-span"}
