[package]
authors = ["monsieurbadia <monsieurbadia@gmail.com>"]
description = "..."
edition = "2021"
license = "MIT"
name = "zhoo-codegen-cranelift"
readme = "README.md"
repository = "https://github.com/monsieurbadia/zhoo"
version.workspace = true

[lib]
doctest = false

[dependencies]
cranelift = "0.88.1"
cranelift-codegen = "0.88.1"
cranelift-jit = "0.88.1"
cranelift-module = "0.88.1"
cranelift-native = "0.88.1"
cranelift-object = "0.88.1"
cranelift-preopt = "0.88.1"
fxhash = "0.2.1"
lazy_static = "1.4.0"
zhoo-analyzer = {path = "../zhoo-analyzer"}
zhoo-ast = {path = "../zhoo-ast"}
zhoo-helper = {path = "../zhoo-helper"}
