[package]
authors = ["monsieurbadia <monsieurbadia@gmail.com>"]
description = "..."
edition = "2021"
license = "MIT"
name = "zhoo-driver"
readme = "README.md"
repository = "https://github.com/monsieurbadia/zhoo"
version.workspace = true

[lib]
doctest = false

[dependencies]
clap = {version = "4.0.10", features = ["derive"]}
flume = "0.10.14"
pollster = "0.2.5"
zhoo = {path = "../zhoo"}
