[package]
authors = ["monsieurbadia <monsieurbadia@gmail.com>"]
description = "..."
edition = "2021"
license = "MIT"
name = "zhoo-driver"
readme = "README.md"
repository = "https://github.com/monsieurbadia/zhoo"
version.workspace = true

[lib]
doctest = false

[dependencies]
clap = {version = "4.0.10", features = ["derive"]}
flume = "0.10.14"
lazy_static = "1.4.0"
loaders = {path = "../../src/tools/loaders"}
pollster = "0.2.5"
qute = "0.0.13"
zhoo-analyzer = {path = "../zhoo-analyzer"}
zhoo-codegen-cranelift = {path = "../zhoo-codegen-cranelift"}
zhoo-helper = {path = "../zhoo-helper"}
zhoo-parser = {path = "../zhoo-parser"}
