[package]
authors = ["monsieurbadia <monsieurbadia@gmail.com>"]
description = "..."
edition = "2021"
license = "MIT"
name = "zhoo-parser"
readme = "README.md"
repository = "https://github.com/monsieurbadia/zhoo"
version.workspace = true

[lib]
doctest = false

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = {version = "0.19.8", features = ["lexer"]}
regex = "1"
zhoo-util = {path = "../zhoo-util"}
