[package]
authors = ["monsieurbadia <monsieurbadia@gmail.com>"]
description = "..."
edition = "2021"
license = "MIT"
name = "zhoo"
readme = "README.md"
repository = "https://github.com/monsieurbadia/zhoo"
version.workspace = true

[lib]
doctest = false

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
Inflector = "0.11.4"
ariadne = "0.1.5"
cranelift = "0.88.1"
cranelift-codegen = "0.88.1"
cranelift-jit = "0.88.1"
cranelift-module = "0.88.1"
cranelift-native = "0.88.1"
cranelift-object = "0.88.1"
cranelift-preopt = "0.88.1"
lalrpop-util = {version = "0.19.8", features = ["lexer"]}
regex = "1"
